--- a/.github/workflows/markdown-pdf.yml
+++ b/.github/workflows/markdown-pdf.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install pandoc and LaTeX
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-latex-base
+          sudo apt-get install -y pandoc texlive-latex-base texlive-latex-extra
 
       - name: Convert Markdown files to PDF
         id: convert
