--- a/.github/workflows/markdown-pdf.yml
+++ b/.github/workflows/markdown-pdf.yml
@@ -24,7 +24,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y pandoc texlive-latex-base texlive-latex-extra texlive-xetex texlive-lang-japanese fonts-ipaexfont
 
-      - name: Convert Markdown files to PDF
+      - name: Convert Markdown files
         id: convert
         shell: bash
         run: |
@@ -38,13 +38,20 @@ jobs:
           fi
 
           for file in "${files[@]}"; do
-            output="pdf/${file%.md}.pdf"
-            mkdir -p "$(dirname "$output")"
+            pdf_output="pdf/${file%.md}.pdf"
+            docx_output="docx/${file%.md}.docx"
+
+            mkdir -p "$(dirname "$pdf_output")"
+            mkdir -p "$(dirname "$docx_output")"
+
             pandoc "$file" \
               --pdf-engine=xelatex \
               -V mainfont=IPAGothic \
-              -o "$output"
-            echo "Converted $file -> $output"
+              -o "$pdf_output"
+            pandoc "$file" -o "$docx_output"
+
+            echo "Converted $file -> $pdf_output"
+            echo "Converted $file -> $docx_output"
           done
 
           echo "generated=true" >> "$GITHUB_OUTPUT"
@@ -55,5 +62,13 @@ jobs:
         with:
           name: markdown-pdf
           path: pdf
+          if-no-files-found: error
+
+      - name: Upload DOCX artifact
+        if: steps.convert.outputs.generated == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: markdown-docx
+          path: docx
           if-no-files-found: error
 
